force-app/main/default/objects/ADD_Conficguration_Rule__c/ADD_Conficguration_Rule__c.object-meta.xml
<CustomObject>
    <label>ADD Conficguration Rule</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ADD Conficguration Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ADD Configuration Rule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>