force-app/main/default/objects/ADD_Conficguration_Rule__c/fields/ADD_Configuration_Rule_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>ADD_Configuration_Rule_Ext_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ADD Configuration Rule Ext Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>