force-app/main/default/objects/ADD_Conficguration_Rule__c/fields/ADD_Product__c.field-meta.xml
<CustomField>
    <fullName>ADD_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ADD Product</label>
    <referenceTo>ADD_Product__c</referenceTo>
    <relationshipLabel>ADD Configuration Rule</relationshipLabel>
    <relationshipName>ADD_Configuration_Rule</relationshipName>
    <type>Lookup</type>
</CustomField>