force-app/main/default/objects/ADD_Conficguration_Rule__c/fields/ADD_Product_Rule__c.field-meta.xml
<CustomField>
    <fullName>ADD_Product_Rule__c</fullName>
    <label>ADD Product Rule</label>
    <referenceTo>ADD_Product_Rule__c</referenceTo>
    <relationshipLabel>ADD Configuration Rule</relationshipLabel>
    <relationshipName>ADD_Configuration_Rule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>